sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/longhorn-ui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: longhorn.indigo.dalmura.cloud
    kubernetes.io/ingress.class: ingress-private
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.indigo.dalmura.cloud`)
      priority: 10
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-cert
